# miden-base

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Makefile.toml  README.md  changes.md  miden-prover-service.toml  mkdocs.yml  out  request_sender.py  requirements.txt  rust-toolchain.toml  rustfmt.toml  store.sqlite3  test.txt
bench-tx/: Cargo.toml  README.md  bench-tx.json
bench-tx/src/: bench-tx.json  main.rs  utils.rs
benchmarks/: Cargo.toml
benchmarks/src/: bench_results.json  benchmarks.rs  main.rs  utils.rs
benchmarks/src/results/: bench_p2id.json  bench_simple.json
crates/miden-batch-prover/: Cargo.toml  README.md
crates/miden-batch-prover/src/: error.rs  lib.rs  local_batch_prover.rs  proposed_batch.rs  proven_batch.rs
crates/miden-block-prover/: Cargo.toml  README.md
crates/miden-block-prover/src/: errors.rs  lib.rs  local_block_prover.rs
crates/miden-lib/: Cargo.toml  README.md  build.rs  masm_doc_comment_fmt.md
crates/miden-lib/src/: account_delta_tracker.rs  auth.rs  lib.rs
crates/miden-objects/: Cargo.toml  README.md
crates/miden-objects/benches/: account_seed.rs
crates/miden-objects/src/: constants.rs  errors.rs  lib.rs
crates/miden-proving-service-client/: Cargo.toml  README.md  build.rs
crates/miden-proving-service-client/proto/: api.proto  proving_service.proto
crates/miden-proving-service-client/src/: lib.rs  prover.rs
crates/miden-test/: Cargo.toml  README.md
crates/miden-testing/: Cargo.toml  README.md
crates/miden-testing/src/: executor.rs  lib.rs  mock_host.rs  utils.rs
crates/miden-tx/: Cargo.toml  README.md
crates/miden-tx-batch-prover/: Cargo.toml  README.md
crates/miden-tx-batch-prover/src/: errors.rs  lib.rs  local_batch_prover.rs
crates/miden-tx/src/: lib.rs
miden-lib/: Cargo.toml  Format_Guidebook.md  README.md  build.rs  comment_format.md  masm_doc_comment_fmt.md
miden-lib/asm/: copy.masm  utils.masm
miden-lib/asm/account_components/: basic_fungible_faucet.masm  rpo_falcon_512.masm
miden-lib/asm/eoa/: basic.masm
miden-lib/asm/faucets/: basic.masm  basic_fungible.masm
miden-lib/asm/kernels/: transaction.masm
miden-lib/asm/miden/: account.masm  asset.masm  faucet.masm  kernel_invocation.masm  kernel_proc_offsets.masm  note.masm  tx.masm
miden-lib/asm/note_scripts/: P2ID.masm  P2IDR.masm  SWAP.masm  SWAPP.masm  basic.masm
miden-lib/asm/sat/: account.masm  account_vault.masm  asset.masm  constants.masm  epilogue.masm  faucet.masm  kernel.masm  layout.masm  miden_wallet.masm  note.masm  note_setup.masm  prologue.masm  tx.masm  utils.masm
miden-lib/asm/scripts/: ASWAP.masm  P2ID.masm  P2IDR.masm  SWAP.masm
miden-lib/asm/utils/: account.masm  account_utils.masm  asset.masm  asset_utils.masm  asset_vault_utils.masm  note.masm  note_utils.masm  utils.masm
miden-lib/asm/wallets/: basic.masm
miden-lib/src/: assembler.rs  auth.rs  event.rs  lib.rs  memory.rs  utils_lib.rs
miden-lib/src/accounts/: mod.rs
miden-lib/src/common/: mod.rs
miden-lib/src/errors/: mod.rs  tx_kernel_errors.rs
miden-lib/src/faucets/: mod.rs
miden-lib/src/notes/: mod.rs  scripts.rs  utils.rs
miden-lib/src/testing/: mod.rs  notes.rs  procedures.rs
miden-lib/src/tests/: mod.rs  test_account.rs  test_asset.rs  test_asset_vault.rs  test_epilogue.rs  test_faucet.rs  test_note.rs  test_note_scripts.rs  test_note_setup.rs  test_prologue.rs  test_tx.rs
miden-lib/src/transaction/: account_stub.rs  errors.rs  events.rs  inputs.rs  memory.rs  mod.rs  outputs.rs  procedures.rs  procedures_v0.rs
miden-lib/src/wallets/: mod.rs
miden-lib/tests/: common.rs  test_account.rs  test_asset.rs  test_asset_vault.rs  test_copy.rs  test_epilogue.rs  test_faucet.rs  test_miden_wallet.rs  test_note.rs  test_note_setup.rs  test_prologue.rs  test_stuff.rs  test_tx.rs
miden-lib/tests/assets/: test.masm  tx_prologue.inputs
miden-lib/tests/common/: data.rs  mod.rs  procedures.rs
miden-proving-service-client/: Cargo.toml  README.md  build.rs
miden-proving-service-client/src/: lib.rs  prover.rs
miden-tx/: Cargo.toml  README.md  build.rs
miden-tx-prover/: Cargo.toml  build.rs
miden-tx-prover/proto/: api.proto
miden-tx-prover/src/: bin.rs  lib.rs
miden-tx-prover/src/domain/: mod.rs
miden-tx/src/: data.rs  error.rs  lib.rs  mock.rs  result.rs  testing.rs  tests.rs
miden-tx/src/auth/: mod.rs  tx_authenticator.rs
miden-tx/src/compiler/: mod.rs  tests.rs
miden-tx/src/errors/: mod.rs  tx_kernel_errors.rs
miden-tx/src/executor/: data.rs  data_store.rs  mast_store.rs  mod.rs
miden-tx/src/host/: account_delta.rs  account_delta_tracker.rs  account_procs.rs  mod.rs  note_builder.rs  note_tracker.rs  tx_authenticator.rs  tx_progress.rs
miden-tx/src/kernel_tests/: mod.rs  test_account.rs  test_asset.rs  test_asset_vault.rs  test_epilogue.rs  test_faucet.rs  test_note.rs  test_prologue.rs  test_tx.rs
miden-tx/src/prover/: mod.rs
miden-tx/src/testing/: account_procs.rs  chain_data.rs  data_store.rs  executor.rs  mock_chain.rs  mock_host.rs  mod.rs  tx_context.rs  utils.rs
miden-tx/src/tests/: mod.rs
miden-tx/src/tx_benches/: bench_results.json  benchmarks.rs  mod.rs  utils.rs
miden-tx/src/verifier/: mod.rs
miden-tx/tests/: compiler_test.rs  faucet_contract_test.rs  p2id_script_test.rs  p2idr_script_test.rs  swap_script_test.rs  test_miden_atomic_swap.rs  test_miden_faucet_contract.rs  test_miden_note_scripts.rs  test_miden_wallet.rs  transaction_test.rs  wallet_test.rs
miden-tx/tests/assets/: test.masm
mock/: Cargo.toml  README.md
mock/src/: account.rs  block.rs  chain.rs  constants.rs  lib.rs  main.rs  notes.rs  procedures.rs  transaction.rs  utils.rs
objects/: Cargo.toml  README.md
objects/benches/: account_seed.rs
objects/src/: advice.rs  constants.rs  errors.rs  lib.rs  mock.rs  result.rs  testing.rs  utils.rs
test-macro/: Cargo.toml
test-macro/src/: lib.rs
test-utils/: Cargo.toml
test-utils/src/: data.rs  lib.rs
tx-compiler/: Cargo.toml
tx-compiler/src/: compiler.rs  error.rs  lib.rs  tests.rs
(+842 files in other folders)
