[workspace]
resolver = "2"
members = [
    "bin/bench-tx",
    "bin/proving-service",
    "crates/miden-block-prover",
    "crates/miden-tx-batch-prover",
    "crates/miden-lib",
    "crates/miden-objects",
    "crates/miden-proving-service-client",
    "crates/miden-tx",
]

[workspace.package]
edition = "2021"
rust-version = "1.84"
license = "MIT"
authors = ["Miden contributors"]
homepage = "https://polygon.technology/polygon-miden"
repository = "https://github.com/0xPolygonMiden/miden-base"
exclude = [".github/"]

[profile.release]
codegen-units = 1
lto = true

[profile.test-release]
inherits = "release"
debug = true
debug-assertions = true
overflow-checks = true

[profile.bench]
codegen-units = 1
lto = true

[workspace.dependencies]
assembly = { path = "../miden-vm/assembly", package = "miden-assembly", default-features = false }
assert_matches = { version = "1.5", default-features = false }
miden-block-prover = { path = "crates/miden-block-prover", version = "0.8", default-features = false }
miden-crypto = { version = "0.13", default-features = false }
miden-lib = { path = "crates/miden-lib", version = "0.8", default-features = false }
miden-objects = { path = "crates/miden-objects", version = "0.8", default-features = false }
miden-prover = { path = "../miden-vm/prover", default-features = false }
miden-stdlib = { path = "../miden-vm/stdlib", default-features = false }
miden-tx = { path = "crates/miden-tx", version = "0.8", default-features = false }
miden-tx-batch-prover = { path = "crates/miden-tx-batch-prover", version = "0.8", default-features = false }
miden-verifier = { path = "../miden-vm/verifier", default-features = false }
rand = { version = "0.8", default-features = false }
thiserror = { version = "2.0", default-features = false }
vm-core = { path = "../miden-vm/core", package = "miden-core", default-features = false }
vm-processor = { path = "../miden-vm/processor", package = "miden-processor", default-features = false }
