[workspace]
resolver = "3"
members = [
  "bin/bench-tx",
  "bin/proving-service",
  "crates/miden-block-prover",
  "crates/miden-tx-batch-prover",
  "crates/miden-lib",
  "crates/miden-objects",
  "crates/miden-proving-service-client",
  "crates/miden-testing",
  "crates/miden-tx",
]

[workspace.package]
edition = "2024"
rust-version = "1.87"
license = "MIT"
authors = ["Miden contributors"]
homepage = "https://miden.xyz"
repository = "https://github.com/0xMiden/miden-base"
exclude = [".github/"]

[profile.release]
codegen-units = 1
lto = true

[profile.test-dev]
inherits = "dev"
opt-level = 1

# Avoid running the expensive debug assertion in winter-prover
# https://github.com/facebook/winterfell/blob/cd32dce2fd4986c94516113568eefd938fafe31c/prover/src/lib.rs#L355C1-L356
[profile.test-dev.package.winter-prover]
debug-assertions = false

[profile.bench]
codegen-units = 1
lto = true

[workspace.dependencies]
assembly = { package = "miden-assembly", version = "0.14", default-features = false }
assert_matches = { version = "1.5", default-features = false }
miden-block-prover = { path = "crates/miden-block-prover", version = "0.10", default-features = false }
miden-crypto = { version = "0.14", default-features = false }
miden-lib = { path = "crates/miden-lib", version = "0.10", default-features = false }
miden-objects = { path = "crates/miden-objects", version = "0.10", default-features = false }
miden-prover = { version = "0.14", default-features = false }
miden-stdlib = { version = "0.14", default-features = false }
miden-testing = { path = "crates/miden-testing", version = "0.10", default-features = false }
miden-tx = { path = "crates/miden-tx", version = "0.10", default-features = false }
miden-tx-batch-prover = { path = "crates/miden-tx-batch-prover", version = "0.10", default-features = false }
miden-verifier = { version = "0.14", default-features = false }
rand = { version = "0.9", default-features = false }
thiserror = { version = "2.0", default-features = false }
vm-core = { package = "miden-core", version = "0.14", default-features = false }
vm-processor = { package = "miden-processor", version = "0.14", default-features = false }
