[package]
name = "miden-bench-tx"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[[bin]]
name = "bench-tx"
path = "src/main.rs"
required-features = ["std"]

[features]
std = ["miden-lib/std", "miden-objects/std", "miden-tx/std", "vm-processor/std", "mock/std", "serde_json/std"]

[dependencies]
miden-lib = { package = "miden-lib", path = "../miden-lib", version = "0.3", default-features = false }
miden-objects = { package = "miden-objects", path = "../objects", version = "0.3", default-features = false }
miden-tx = { package = "miden-tx", path = "../miden-tx", version = "0.3", default-features = false }
mock = { package = "miden-mock", path = "../mock", features = ["std"], default-features = false, optional = true }
serde_json = { package = "serde_json", version = "1.0" }
vm-processor = { workspace = true }
