[package]
name = "miden-bench-tx"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[[bin]]
name = "bench-tx"
path = "src/main.rs"

[dependencies]
miden-lib = { path = "../miden-lib", version = "0.5" }
miden-objects = { path = "../objects", version = "0.5" }
miden-tx = { path = "../miden-tx", version = "0.5", features = ["testing"] }
rand = { workspace = true }
serde = { package = "serde", version = "1.0", features = ["derive"]}
serde_json = { package = "serde_json", version = "1.0", features = ["preserve_order"] }
vm-processor = { workspace = true }
