[package]
name = "benchmarks"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
concurrent = ["miden-lib/concurrent", "miden-objects/concurrent", "miden-prover/concurrent", "std"]
default = ["std"]
std = ["miden-lib/std", "miden-objects/std", "miden-prover/std", "miden-verifier/std", "vm-processor/std"]
executable = ["std"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
miden-lib = { package = "miden-lib", path = "../miden-lib", version = "0.2", default-features = false }
miden-tx = { package = "miden-tx", path = "../miden-tx", version = "0.2", default-features = false }
miden-objects = { package = "miden-objects", path = "../objects", version = "0.2", default-features = false }
miden-prover = { workspace = true }
miden-verifier = { workspace = true }
mock = { package = "miden-mock", path = "../mock", default-features = false }
vm-processor = { workspace = true }