[package]
name = "miden-lib"
version = "0.2.0"
description = "Standard library of the Miden rollup"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/miden-base"
categories = ["no-std"]
keywords = ["miden", "program", "stdlib", "transaction", "kernel"]
edition = "2021"
rust-version = "1.75"

[lib]

[features]
concurrent = ["miden-objects/concurrent", "std"]
default = ["std"]
std = [
    "assembly/std",
    "miden-objects/std",
    "miden-stdlib/std",
    "vm-processor/std",
    "mock/std",
]
# the testing feature is required to enable the account creation pow patch
testing = ["miden-objects/testing"]

[dependencies]
miden-objects = { package = "miden-objects", path = "../objects", version = "0.2", default-features = false }
miden-stdlib = { workspace = true }

[dev-dependencies]
miden-objects = { package = "miden-objects", path = "../objects", version = "0.2", default-features = false, features = [
    "testing",
] }
mock = { package = "miden-mock", path = "../mock", default-features = false }
vm-processor = { workspace = true, features = ["internals"] }

[build-dependencies]
assembly = { workspace = true }
