[package]
name = "miden-lib"
version = "0.3.0"
description = "Standard library of the Miden rollup"
readme = "README.md"
categories = ["no-std"]
keywords = ["miden", "program", "stdlib", "transaction", "kernel"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]

[features]
concurrent = ["miden-objects/concurrent", "std"]
default = ["std"]
std = [
    "assembly/std",
    "miden-objects/std",
    "miden-stdlib/std",
    "vm-processor/std",
    "mock/std",
]
# the testing feature is required to enable the account creation pow patch
testing = ["miden-objects/testing"]

[dependencies]
miden-objects = { package = "miden-objects", path = "../objects", version = "0.3", default-features = false }
miden-stdlib = { workspace = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
miden-base-test-macro = { path = "../test-macro" }
miden-objects = { package = "miden-objects", path = "../objects", version = "0.3", default-features = false, features = ["testing"] }
mock = { package = "miden-mock", path = "../mock", default-features = false }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
vm-processor = { workspace = true, features = ["internals"] }

[build-dependencies]
assembly = { workspace = true }
