[package]
name = "miden-tx"
version = "0.4.0"
description = "Miden rollup transaction compiler, executor, and prover"
readme = "README.md"
categories = ["no-std"]
keywords = ["miden", "transaction"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[[test]]
name = "miden-tx"
path = "tests/integration/main.rs"

[features]
concurrent = ["miden-lib/concurrent", "miden-objects/concurrent", "miden-prover/concurrent", "std"]
default = ["std","testing"]
std = ["miden-lib/std", "miden-objects/std", "miden-prover/std", "miden-verifier/std", "vm-processor/std"]
testing = ["miden-objects/testing", "miden-lib/testing"]

[dependencies]
miden-lib = { path = "../miden-lib", version = "0.4", default-features = false }
miden-objects = { path = "../objects", version = "0.4", default-features = false }
miden-prover = { workspace = true }
miden-verifier = { workspace = true }
rand = { workspace = true }
vm-processor = { workspace = true, features = ["internals"] }

[dev-dependencies]
rand_chacha = { version = "0.3", default-features = false }
miden-tx = {path=".", features= ["testing"]}
