[package]
name = "miden-mock"
version = "0.2.0"
description = "Library for mocking and testing core Miden rollup components"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/miden-base"
categories = ["no-std"]
keywords = ["miden", "mock"]
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "mock"
path = "src/main.rs"
required-features = ["executable"]

[features]
default = ["std"]
executable = ["std", "serde", "dep:clap"]
serde = ["dep:serde", "miden-objects/serde"]
std = ["miden-lib/std", "miden-objects/std"]

[dependencies]
clap = { version = "4.4", features = ["derive"], optional = true }
env_logger = { version = "0.11" }
hex = { version = "0.4" }
miden-lib = { path = "../miden-lib", version = "0.2" }
miden-objects = { path = "../objects", version = "0.2", features = [
    "log",
    "serde",
    "testing",
] }
miden-prover = { workspace = true }
postcard = { version = "1.0", features = ["alloc"] }
rand = { version = "0.8" }
rand-utils = { package = "winter-rand-utils", version = "0.8" }
rand_pcg = { version = "0.3", features = ["serde1"] }
serde = { version = "1.0", optional = true, default-features = false, features = [
    "derive",
] }
vm-processor = { workspace = true, features = ["internals"] }
