[package]
name = "miden-objects"
version = "0.3.0"
description = "Core components of the Miden rollup"
readme = "README.md"
categories = ["no-std"]
keywords = ["miden", "objects"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[[bench]]
name = "account_seed"
harness = false

[lib]
bench = false

[features]
default = ["std"]
concurrent = ["std"]
serde = ["dep:serde", "miden-crypto/serde"]
std = ["assembly/std", "miden-crypto/std", "miden-verifier/std", "vm-core/std", "vm-processor/std"]
testing = ["dep:winter-rand-utils"]

[dependencies]
assembly = { workspace = true }
log = { version = "0.4", optional = true }
miden-crypto = { workspace = true }
miden-verifier = { workspace = true }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
vm-core = { workspace = true }
vm-processor = { workspace = true }
winter-rand-utils = { version = "0.8", optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
tempfile = { version = "3.0" }
