[package]
name = "miden-objects"
version = "0.5.0"
description = "Core components of the Miden rollup"
readme = "README.md"
categories = ["no-std"]
keywords = ["miden", "objects"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[[bench]]
name = "account_seed"
harness = false

[lib]
bench = false

[features]
concurrent = ["std"]
default = ["std"]
serde = ["dep:serde", "miden-crypto/serde"]
std = ["assembly/std", "miden-crypto/std", "miden-verifier/std", "vm-core/std", "vm-processor/std"]
testing = ["dep:winter-rand-utils", "dep:rand"]

[dependencies]
assembly = { workspace = true }
log = { version = "0.4", optional = true }
miden-crypto = { workspace = true }
miden-verifier = { workspace = true }
rand = { workspace = true, optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
vm-core = { workspace = true }
vm-processor = { workspace = true }
winter-rand-utils = { version = "0.9", optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
miden-objects = { path = ".", features = ["testing"] }
rstest = { version = "0.22" }
tempfile = { version = "3.12" }
