[package]
name = "miden-base-test-macro"
version = "0.1.0"
description = "Miden base's test macro"
keywords = ["miden", "base", "utils", "macro"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
quote = { version = "1.0" }
syn = { version = "2.0" , features = ["full", "extra-traits"]}

[lib]
proc-macro = true
