[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"
rust-version = "1.67"

[features]
default = ["std"]
std = ["assembly/std", "crypto/std", "processor/std", "miden-lib/std", "miden-objects/std", "miden-test-utils/std"]

[dependencies]
assembly = { package = "miden-assembly", git = "https://github.com/0xPolygonMiden/miden-vm", branch = "next", default-features = false }
crypto = { package = "miden-crypto", version = "0.6", default-features = false }
miden-objects = { path = "../objects", default-features = false }
miden-lib = { path = "../miden-lib", default-features = false }
miden-stdlib = { package = "miden-stdlib", git = "https://github.com/0xPolygonMiden/miden-vm", branch = "next", default-features = false }
processor = { package = "miden-processor", git = "https://github.com/0xPolygonMiden/miden-vm", branch = "next", features = ["internals"] }
miden-test-utils = { package = "miden-test-utils", git = "https://github.com/0xPolygonMiden/miden-vm", branch = "next", default-features = false }
