[package]
name = "miden-block-prover"
version = "0.10.0"
description = "Miden blockchain block executor and prover"
readme = "README.md"
categories = ["cryptography"]
keywords = ["miden", "block", "prover"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false

[features]
testing = []

[dependencies]
miden-objects = { workspace = true }
miden-lib = { workspace = true }
thiserror = { workspace = true }
