[package]
name = "miden-lib"
version = "0.9.0"
description = "Standard library of the Miden rollup"
readme = "README.md"
categories = ["no-std"]
keywords = ["miden", "transaction", "kernel"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]

[features]
default = ["std"]
std = ["assembly/std", "miden-objects/std", "miden-stdlib/std", "vm-processor/std"]
testing = ["miden-objects/testing"]
with-debug-info = ["miden-stdlib/with-debug-info"]

[dependencies]
miden-objects = { workspace = true }
miden-stdlib = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
miden-objects = { workspace = true, features = ["testing"] }
vm-processor = { workspace = true, features = ["testing"] }

[build-dependencies]
assembly = { workspace = true }
miden-stdlib = { workspace = true }
regex = { version = "1.11" }
walkdir = { version = "2.5" }
